# midi-toolkit-rs

./: Cargo.toml
.github/workflows/: check.yml
midi-toolkit/: Cargo.toml  README.md
midi-toolkit-derive/: Cargo.toml
midi-toolkit-derive/src/: lib.rs
midi-toolkit/examples/: benchmark.rs  events_notes.rs  note_chopper.rs  nps_bench.rs  parse_benchmark.rs  player.rs  polyphony.rs  statistics.rs  test.rs  write.rs
midi-toolkit/fuzz/: Cargo.toml
midi-toolkit/fuzz/fuzz_targets/: merge.rs  parse.rs
midi-toolkit/src/: events.rs  gen_iter.rs  io.rs  lib.rs  notes.rs  num.rs
midi-toolkit/src/events/: event.rs  event_variants.rs  events.rs
midi-toolkit/src/io/: errors.rs  midi_file.rs  midi_writer.rs  readers.rs  track_parser.rs
midi-toolkit/src/sequence/: common.rs  conversion.rs  event.rs
midi-toolkit/src/sequence/common/: cast_delta.rs  merge_threaded.rs  threaded_buffer.rs  to_vec.rs  unwrap_items.rs  wrap_ok.rs
midi-toolkit/src/sequence/conversion/: events_to_notes.rs  notes_to_events.rs
midi-toolkit/src/sequence/event/: batched.rs  cancel_tempo_events.rs  delta.rs  filter_events.rs  merge_events.rs  scale_event_ppq.rs  scale_event_time.rs  stats.rs  track.rs
midi-toolkit/src/sequence/note/: merge_notes.rs  merge_notes_iter.rs
src/midi-toolkit/: Cargo.toml
src/midi-toolkit-derive/: Cargo.toml
src/midi-toolkit-derive/src/: lib.rs
src/midi-toolkit/examples/: player.rs  polyphony.rs  statistics.rs  test.rs  write.rs
src/midi-toolkit/src/: events.rs  io.rs  lib.rs  num.rs  sequence.rs
src/midi-toolkit/src/events/: event.rs  events.rs
src/midi-toolkit/src/io/: errors.rs  midi_writer.rs  track_parser.rs
src/midi-toolkit/src/sequence/: event.rs  note.rs
src/midi-toolkit/src/sequence/common/: to_vec.rs  unwrap_items.rs
src/midi-toolkit/src/sequence/conversion/: events_to_notes.rs
src/midi-toolkit/src/sequence/event/: filter_events.rs
src/midi-toolkit/src/sequence/note/: merge_notes.rs  merge_notes_iter.rs
src/midi-tools/: Cargo.toml
src/midi-tools-derive/: Cargo.toml
src/midi-tools-derive/src/: lib.rs
src/midi-tools/examples/: benchmark.rs  polyphony.rs  size.rs  test.rs  write.rs
src/midi-tools/src/: events.rs  io.rs  lib.rs  main.rs  notes.rs  num.rs
src/midi-tools/src/events/: delta.rs  event.rs  events.rs
src/midi-tools/src/io/: errors.rs  midi_file.rs  midi_writer.rs  readers.rs  track_parser.rs
src/midi-tools/src/sequence/: common.rs  event.rs
src/midi-tools/src/sequence/common/: cast_delta.rs  to_vec.rs  unwrap_items.rs  wrap_ok.rs
src/midi-tools/src/sequence/event/: change_ppq.rs  merge_events.rs  scale_event_ppq.rs  scale_event_time.rs  scale_time.rs
