[package]
name = "midi-toolkit-rs"
description = "A library for ultra high performance MIDI operations, designed for black MIDI. The library isn't perfect"
license = "MIT"
version = "0.1.0"
edition = "2018"
workspace = ".."

[lib]
name = "midi_toolkit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
derive = { path = "../midi-toolkit-derive", package = "midi-toolkit-rs-derive", version = "0.1.0" }
crossbeam-channel = "0.5.1"
rayon = "1.5.1"
thiserror = "1.0.38"

[dev-dependencies]
# TODO: Publish this in the future as a separate crate
# kdmapi = { git = "https://github.com/arduano/kdmapi", rev = "a8013dd" }
