[package]
name = "midi-toolkit-rs"
version = "0.1.0"
edition = "2018"
workspace = "../.."

[lib]
name="midi_toolkit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gen-iter = "0.2.0"
num-traits = "0.2.14"
derive = { path = "../midi-toolkit-derive", package = "midi-toolkit-rs-derive" }
crossbeam-channel = "0.5.1"

[dev-dependencies]
kdmapi = { git = "https://github.com/arduano/kdmapi", rev = "a8013dd" }
