[package]
name = "midi-tools-rs-derive"
version = "0.1.0"
edition = "2018"
workspace = "../.."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
num-traits = "0.2.14"
syn = "1"
quote = "1"
proc-macro2 = { version = "1", default-features = false }
proc-macro-error = "1.0"
to_vec = "0.1.0"
convert_case = "0.4.0"
