[package]
name = "midi-tools-rs"
version = "0.1.0"
edition = "2018"
workspace = "../.."

[lib]
name="midi_tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gen-iter = "0.2.0"
num-traits = "0.2.14"
derive = { path = "../midi-tools-derive", package = "midi-tools-rs-derive" }
crossbeam-channel = "0.5.1"
